# swagger/swagger.json
@@ -480,6 +480,39 @@
                 }
             }
         },
+        "/role/roleRevokePermission": {
+            "post": {
+                "description": "revoke permission",
+                "consumes": [
+                    "application/octet-stream"
+                ],
+                "produces": [
+                    "application/octet-stream"
+                ],
+                "tags": [
+                    "role"
+                ],
+                "parameters": [
+                    {
+                        "description": "RoleRevokePermissionParam",
+                        "name": "RoleRevokePermissionParam",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/kk_etcd_models.RoleRevokePermissionParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/kk_etcd_models.RoleRevokePermissionResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/server/serverList": {
             "post": {
                 "description": "list server",
@@ -980,21 +1013,32 @@
                 }
             }
         },
-        "kk_etcd_models.PBRole": {
+        "kk_etcd_models.PBPermission": {
             "type": "object",
             "properties": {
                 "Key": {
                     "type": "string"
                 },
-                "Name": {
-                    "type": "string"
-                },
                 "PermissionType": {
-                  "description": "authpb.READ 0\nauthpb.WRITE 1\nauthpb.READWRITE 2",
+                    "description": "authpb.READ 0\nauthpb.WRITE 1\nauthpb.READWRITE 2",
                     "type": "integer"
                 },
                 "RangeEnd": {
                     "type": "string"
+                }
+            }
+        },
+        "kk_etcd_models.PBRole": {
+            "type": "object",
+            "properties": {
+                "Name": {
+                    "type": "string"
+                },
+                "Perms": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/kk_etcd_models.PBPermission"
+                    }
                 }
             }
         },
@@ -1067,8 +1111,11 @@
         "kk_etcd_models.RoleGrantPermissionParam": {
             "type": "object",
             "properties": {
-                "Role": {
-                    "$ref": "#/definitions/kk_etcd_models.PBRole"
+                "Name": {
+                    "type": "string"
+                },
+                "Perm": {
+                    "$ref": "#/definitions/kk_etcd_models.PBPermission"
                 }
             }
         },
@@ -1085,6 +1132,23 @@
                     "$ref": "#/definitions/kk_etcd_models.PBListRole"
                 }
             }
+        },
+        "kk_etcd_models.RoleRevokePermissionParam": {
+            "type": "object",
+            "properties": {
+                "Key": {
+                    "type": "string"
+                },
+                "Name": {
+                    "type": "string"
+                },
+                "RangeEnd": {
+                    "type": "string"
+                }
+            }
+        },
+        "kk_etcd_models.RoleRevokePermissionResponse": {
+            "type": "object"
         },
         "kk_etcd_models.ServerListParam": {
             "type": "object",
